--- a/FFXIVPlayerWardrobe/FFXIVPlayerWardrobe.csproj
+++ b/FFXIVPlayerWardrobe/FFXIVPlayerWardrobe.csproj
@@ -93,6 +93,12 @@
     <Compile Include="Mem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResidentSelectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ResidentSelectForm.Designer.cs">
+      <DependentUpon>ResidentSelectForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SaveDat.cs" />
     <Compile Include="ScanProgressForm.cs">
       <SubType>Form</SubType>
@@ -123,6 +129,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ResidentSelectForm.resx">
+      <DependentUpon>ResidentSelectForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ScanProgressForm.resx">
       <DependentUpon>ScanProgressForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -139,6 +148,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\enpcbase.exh.csv" />
+    <None Include="Resources\enpcresident.exh_en.csv" />
     <None Include="Resources\item.exh_en.csv" />
   </ItemGroup>
   <ItemGroup>
