--- a/FFXIVPlayerWardrobe/FFXIVPlayerWardrobe.csproj
+++ b/FFXIVPlayerWardrobe/FFXIVPlayerWardrobe.csproj
@@ -62,52 +62,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CharaSaveChooseForm.cs">
+    <Compile Include="Forms\CharaSaveChooseForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CharaSaveChooseForm.Designer.cs">
+    <Compile Include="Forms\CharaSaveChooseForm.Designer.cs">
       <DependentUpon>CharaSaveChooseForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ExdCsvReader.cs" />
-    <Compile Include="FindCustomizeOffset.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Memory\Definitions.cs" />
+    <Compile Include="Memory\FindCustomizeOffset.cs" />
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="GearSet.cs" />
-    <Compile Include="ItemPicker.cs">
+    <Compile Include="Forms\ItemPicker.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ItemPicker.Designer.cs">
+    <Compile Include="Forms\ItemPicker.Designer.cs">
       <DependentUpon>ItemPicker.cs</DependentUpon>
     </Compile>
     <Compile Include="MakeSaveDatList.cs" />
-    <Compile Include="Mem.cs" />
+    <Compile Include="Memory\Mem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResidentSelectForm.cs">
+    <Compile Include="Forms\ResidentSelectForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ResidentSelectForm.Designer.cs">
+    <Compile Include="Forms\ResidentSelectForm.Designer.cs">
       <DependentUpon>ResidentSelectForm.cs</DependentUpon>
     </Compile>
     <Compile Include="SaveDat.cs" />
-    <Compile Include="ScanProgressForm.cs">
+    <Compile Include="Forms\ScanProgressForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ScanProgressForm.Designer.cs">
+    <Compile Include="Forms\ScanProgressForm.Designer.cs">
       <DependentUpon>ScanProgressForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Util.cs" />
-    <EmbeddedResource Include="CharaSaveChooseForm.resx">
+    <EmbeddedResource Include="Forms\CharaSaveChooseForm.resx">
       <DependentUpon>CharaSaveChooseForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ItemPicker.resx">
+    <EmbeddedResource Include="Forms\ItemPicker.resx">
       <DependentUpon>ItemPicker.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -120,10 +121,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ResidentSelectForm.resx">
+    <EmbeddedResource Include="Forms\ResidentSelectForm.resx">
       <DependentUpon>ResidentSelectForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ScanProgressForm.resx">
+    <EmbeddedResource Include="Forms\ScanProgressForm.resx">
       <DependentUpon>ScanProgressForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.manifest">
