Hair color chooser

--- a/FFXIVPlayerWardrobe/FFXIVPlayerWardrobe.csproj
+++ b/FFXIVPlayerWardrobe/FFXIVPlayerWardrobe.csproj
@@ -62,6 +62,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AssetReaders\CmpReader.cs" />
+    <Compile Include="Forms\CharaMakeColorSelector.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\CharaMakeColorSelector.Designer.cs">
+      <DependentUpon>CharaMakeColorSelector.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\CharaMakeFeatureSelector.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,6 +123,9 @@
     </Compile>
     <Compile Include="Util.cs" />
     <Compile Include="VersionCheck.cs" />
+    <EmbeddedResource Include="Forms\CharaMakeColorSelector.resx">
+      <DependentUpon>CharaMakeColorSelector.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\CharaMakeFeatureSelector.resx">
       <DependentUpon>CharaMakeFeatureSelector.cs</DependentUpon>
     </EmbeddedResource>
@@ -163,6 +173,7 @@
     <None Include="Resources\charamakecustomize.exh.csv" />
     <None Include="Resources\enpcbase.exh.csv" />
     <None Include="Resources\enpcresident.exh_en.csv" />
+    <None Include="Resources\human.cmp" />
     <None Include="Resources\item.exh_en.csv" />
   </ItemGroup>
   <ItemGroup>
