--- a/FFXIVPlayerWardrobe/FFXIVPlayerWardrobe.csproj
+++ b/FFXIVPlayerWardrobe/FFXIVPlayerWardrobe.csproj
@@ -88,6 +88,12 @@
     <Compile Include="Forms\EditCustomizeForm.Designer.cs">
       <DependentUpon>EditCustomizeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\TimeOffsetSelector.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\TimeOffsetSelector.Designer.cs">
+      <DependentUpon>TimeOffsetSelector.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\WeatherSelector.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EditCustomizeForm.resx">
       <DependentUpon>EditCustomizeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TimeOffsetSelector.resx">
+      <DependentUpon>TimeOffsetSelector.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\WeatherSelector.resx">
       <DependentUpon>WeatherSelector.cs</DependentUpon>
